  - Spanish translation (Alvaro), Brazil Portuguese translation (Marco Souza)
  - fix save bug with text boxes containing > 4095 characters
  - Czech translation (David Kolibac), Dutch translation (Timo Kluck)
  - fix crash upon unplugging input devices
  - change close dialog box default to "save" (patch by Kit Barnes)
  - option to force PDF background rendering via cairo (slower but nicer)

Version 0.4.5 (Oct 2, 2009):
  - bugfixes for GTK+ 2.16/2.17 issues with xinput events
  - various minor UI bugfixes
  - gettext internationalization (contributed by David Planella)
  - Catalan translation (by David Planella), French translation
  - use poppler instead of pdftoppm to render PDF backgrounds 
    (after patches by Mike Ter Louw and Bob McElrath)
  - various improvements to UI and to key bindings (including
    patches by Bob McElrath and Lu Zhihe)
  - use gtk-print instead of libgnomeprint for printing
  - custom color chooser (patch contributed by Alex Ray)
  - option to have tablet buttons toggle the mapping rather than draw
  - paper color chooser (after a patch by Ole Joergen Broenner)
  - remove binary installer (due to binary incompatibilities)
  - UPDATED DEPENDENCIES: need gtk+ 2.10, poppler-glib 0.5.4

Version 0.4.2.1 (Mar 27, 2008):
  - bugfix for #1926757 (crash upon pasting variable-width stroke)
  - bugfix: set ruler/recognizer setting to default upon switching tools

Version 0.4.2 (Mar 25, 2008):
  - bugfixes for X.org 7.3; allow XInput and core events in reverse order
  - resize selection (patch contributed by Andy Neitzke)
  - pressure sensitive pen (variable stroke width) (patch by Andy Neitzke)
  - geometric shape recognizer (after an idea by Lukasz Kaiser) (see manual)
  - clean up compiler warnings (patch contributed by Danny Kukawka)

Version 0.4.1 (Sep 15, 2007):
  - bugfix: compatibility with new versions of pdftoppm (thanks to V. Ciancia)
  - GTK+ 2.11 event processing bugfix