@@ -9,6 +9,7 @@ This version:
   - fix crash upon unplugging input devices
   - change close dialog box default to "save" (patch by Kit Barnes)
   - option to force PDF background rendering via cairo (slower but nicer)
+  - wrapper for missing GdkPixbuf rendering function in newest poppler
 
 Version 0.4.5 (Oct 2, 2009):
   - bugfixes for GTK+ 2.16/2.17 issues with xinput events
